--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
-    <title>Webpack TypeScript BabylonJS Starter</title>
+    <title>Webpack TypeScript BabylonJS</title>
     <style>
         html, body {
             overflow: hidden;
